dark mode fixes

--- a/playbook/app/pb_kits/playbook/pb_nav/_subtle_mixin.scss
+++ b/playbook/app/pb_kits/playbook/pb_nav/_subtle_mixin.scss
@@ -1,11 +1,11 @@
 @import "tokens/typography";
 
 @mixin subtle {
-  [class*=pb_nav_list_kit_item][class*=pb_nav_list_item]{
+  [class*="pb_nav_list_kit_item"][class*="pb_nav_list_item"] {
     border-radius: $border_rad_heavier;
     border-bottom: 0;
     margin: $space_xs ($space_sm - 2px);
-    &[class*=_link] {
+    &[class*="_link"] {
       text-decoration: none;
       display: flex;
       align-items: center;
@@ -16,30 +16,30 @@
       transition-timing-function: $bezier;
       border-radius: $border_rad_heavier;
       @include pb_body($text_lt_default);
-      [class*=_icon_left] {
+      [class*="_icon_left"] {
         margin-right: ($space_xs + 2px);
         color: $text_lt_lighter;
       }
-      [class*=_icon_right] {
+      [class*="_icon_right"] {
         margin-left: ($space_xs + 2px);
         color: $text_lt_default;
       }
-      [class*=_text] {
+      [class*="_text"] {
         flex: 1;
       }
       &:hover {
         background-color: rgba($primary, 0.03);
-        [class*=_icon] {
+        [class*="_icon"] {
           color: $primary;
         }
-        [class*=_text] {
+        [class*="_text"] {
           color: $primary;
         }
       }
     }
-    &[class*=_active] {
+    &[class*="_active"] {
       color: $primary;
       letter-spacing: normal;
     }
-   }
+  }
 }
